# contxt-sdk-python

./: .bumpversion.cfg  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODEOWNERS  CONTRIBUTING.md  LICENSE  LICENSE.md  Makefile  PointList.csv  README.md  cntxt  docker-compose.yaml  index.html  main  main.py  meta.yaml  mkdocs.yml  nionic_queries.py  output.txt  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  setup.cfg  setup.py  sitemap.xml  test.json  wercker.yml
.github/: PROMOTE_TEMPLATE.md  PULL_REQUEST_TEMPLATE.md  dependabot.yaml  dependabot.yml  main.yml
.github/workflows/: GitSec.yaml  automerge.yaml  build.yaml  build.yml  ci.yaml  dependabot-alerts-to-jira.yaml  docs.yaml  main.yml  promote.yaml  release.yaml  security.yaml
cli/: index.html
cli/commands/: index.html
contxt/: __init__.py  __main__.py  __version__.py  asset_framework_new.py  dlq_consumer.py  exceptions.py  message_bus.py  py.typed  workers.py
contxt/auth/: __init__.py  cli.py  jwt.py  machine.py  plain.py  token.py
contxt/cli/: __init__.py  assets.py  bus.py  clients.py  contxt.py  ems.py  iot.py  log.py  main.py  parsers.py  utils.py
contxt/cli/commands/: __init__.py  assets.py  auth.py  base.py  bus.py  clusters.py  common.py  control.py  contxt.py  edge_nodes.py  ems.py  env.py  facilities.py  find.py  init.py  iot.py  metrics.py  orgs.py  project_envs.py  projects.py  rates.py  roles.py  service.py  service_instances.py  services.py
contxt/cli_bare/: parsers.py
contxt/func/: ems.py  iot.py  organizations.py
contxt/functions/: __init__.py  assets.py  bus.py  ems.py  facilities.py  iot.py  organizations.py
contxt/legacy/auth/: __init__.py  cli.py  machine.py
contxt/legacy/cli/: __init__.py  assets.py  bus.py  contxt.py  ems.py  iot.py
contxt/legacy/models/: ems.py  iot.py
contxt/legacy/services/: __init__.py  asset_framework.py  assets.py  auth.py  ems.py  iot.py
contxt/models/: __init__.py  asset.py  assets.py  base.py  bus.py  changetrackingrecord.py  control.py  contxt.py  ems.py  etl.py  events.py  facilities.py  files.py  health.py  iot.py  rates.py  sis.py
contxt/schemas/nionic/: nionic_schema.json  schema.json
contxt/services/: __init__.py  api.py  api_client.py  asset_framework.py  asset_framework_new.py  asset_migration.py  asset_models.py  assets.py  assets_migration.py  auth.py  authentication.py  base_graph_service.py  bus.py  contxt.py  contxt_access.py  contxt_deployments.py  ems.py  events.py  facilities.py  files.py  health.py  iot.py  ngest.py  nionic.py  nionic_iot.py  pagination.py  rates.py  sis.py  utilities.py
contxt/services/base/: .gitignore  base.py  base_schema.py
contxt/services/control/: .gitignore  control.py  control_schema.json  control_schema.py
contxt/services/legacy/: asset_framework.py  assets.py
contxt/tests/: asset_schema.py  it_assets.py  test.py  test_assets.py
contxt/tools/workers/: ngest.py
contxt/utils/: __init__.py  assets_migration.py  auth.py  collections.py  config.py  contxt_environment.py  datetime.py  decorators.py  normalization.py  object_mapper.py  orgs.py  persistent_contxt_config.py  plot.py  sdk_config.py  serializer.py  stored_file.py  vis.py
contxt/utils/auth/: __init__.py  cli.py  machine.py
contxt/utils/controlsim/: models.py  simulator.py
contxt/utils/workers/: __init__.py
contxt/workers/: __init__.py
docs/: cli.md  index.md  release.md  worker.md
docs/cli/: commands.md  index.md  quickstart.md
docs/configs/: basic_config.yml
docs/examples/: worker.py
docs/examples/energy/: main_services.py  production_data.py
docs/examples/iot/: groupings.py
docs/examples/upcoming/: mains.py
docs/sdk/: MetricDataExtraction.ipynb  MetricDataRetrieval.ipynb  worker.md
docs/sdk/MetricDataRetrieval/: MetricDataRetrieval.ipynb  MetricDataRetrieval.md  MetricDataRetrieval.py
examples/: sample_worker.py  worker.py
export_test-grouping_2019-04-03_22:27:21/: meta.json
graphql/: nionic_queries.graphql  nionic_schema.json
scripts/: normalization.py  plot.py  start-docker.sh
sdk/: MetricDataRetrieval.ipynb
sdk/worker/: index.html
search/: search_index.json
tests/: conftest.py  tes_it_assets.py
tests/auth/: test_base.py  test_jwt.py
tests/cli/: test_main.py  test_parsers.py
tests/integration/: __init__.py  it.py  it_assets.py  test_assets_service.py  test_auth_service.py  test_base_api.py  test_bus_service.py  test_contxt_service.py  test_ems_service.py  test_events_service.py  test_facilities_service.py  test_iot_service.py  test_ngest_service.py
tests/models/: test_etl.py
tests/services/: test_api.py  test_auth.py  test_facilities.py  test_nionic.py
tests/static/: asset_schema.py
tests/system/: test_ems.py  test_facilities.py
tests/unit/: test_auth.py  test_ctr.py  test_object_mapper.py  test_parsers.py
tests/utils/: test_object_mapper.py
(+1 files in other folders)
