[tool.poetry]
name = "contxt-sdk"
version = "6.6.1"
description = "Contxt SDK from ndustrial"
authors = ["ndustrial <dev@ndustrial.io>"]
license = "ISC"
readme = "README.md"
repository = "https://github.com/ndustrialio/contxt-sdk-python"
packages = [ { include = "contxt" } ]

[tool.poetry.dependencies]
python = "^3.9.2"
auth0-python = "^4"
click = ">=7,<9"
cryptography = { version = ">=42.0.4", optional = true } # enable pyjwt to en/decode jwt via RSA
pyjwt = "^2"
pyyaml = "^6.0.2"
requests = "^2"
tabulate = "*"
sgqlc = ">=15,<17"
python-slugify = ">=6.1.2,<9.0.0"

[tool.poetry.dev-dependencies]
black = "^25"
flake8 = "^7.1.2"
isort = "^6"
mkdocs = "^1.4.2"
mkdocs-click = "^0.8.0"
mypy = "^1.15.0"
poethepoet = "^0"
pre-commit = "^4"
pytest = "^8"
types-click = "^7.1.8"
types-jwt = "^0.1.3"
types-setuptools = "^75.8.0"
types-pyyaml = "^6.0.12"
types-requests = "^2.31.0"
types-tabulate = "^0.9.0.2"
types-python-slugify = "^8.0.0.2"

[tool.poetry.extras]
crypto = ["cryptography"]

[tool.poetry.scripts]
contxt = "contxt.__main__:cli"

[tool.poe.tasks]
clean = { cmd = "rm -rf .mypy_cache/ .pytest_cache/ build/ dist/ *.egg-info", help = "Remove build artifacts" }
docs = { cmd = "mkdocs serve", help = "Serve documentation site" }
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest tests", help = "Run tests" }

[tool.black]
line-length = 105

[tool.isort]
line_length = 105
profile = "black"

[build-system]
requires = ["poetry-core>=1.0"]
build-backend = "poetry.core.masonry.api"

[mypy]
exclude = "/contxt/generated/"