[project]
name = "contxt-sdk"
version = "6.9.0"
description = "Contxt SDK from ndustrial"
readme = "README.md"
license = { text = "ISC" }
authors = [
  { name = "ndustrial", email = "dev@ndustrial.io" }
]
requires-python = "^3.9.2"
dependencies = [
  "auth0-python>=4,<5",
  "click>=7,<9",
  "pyjwt>=2,<3",
  "pyyaml>=6.0.2,<7",
  "requests>=2,<3",
  "tabulate>=0.9,<1",
  "sgqlc>=15,<17",
  "python-slugify>=6.1.2,<9.0.0",
  "urllib3 (>=2.6.0)",
]

[project.optional-dependencies]
crypto = ["cryptography>=42.0.4"]

[project.scripts]
contxt = "contxt.__main__:cli"

[project.urls]
Repository = "https://github.com/ndustrialio/contxt-sdk-python"

[tool.poetry]
packages = [{ include = "contxt" }]

[tool.poetry.group.dev.dependencies]
black = "^25"
flake8 = "^7.1.2"
isort = "^6"
mkdocs = "^1.4.2"
mkdocs-click = "0.8.1"
mypy = "^1.15.0"
poethepoet = "^0.25"
pre-commit = "^4"
pytest = "^8"
types-click = "^7.1.8"
types-jwt = "^0.1.3"
types-setuptools = ">=76,<81"
types-pyyaml = "^6.0.12"
types-requests = "^2.32.0"
types-tabulate = "^0.9.0.2"
types-python-slugify = "^8.0.0.2"

[tool.poe.tasks]
clean = { cmd = "rm -rf .mypy_cache/ .pytest_cache/ build/ dist/ *.egg-info", help = "Remove build artifacts" }
docs = { cmd = "mkdocs serve", help = "Serve documentation site" }
lint = { cmd = "pre-commit run --all-files", help = "Run linters and formatters" }
test = { cmd = "pytest tests", help = "Run tests" }

[tool.black]
line-length = 105

[tool.isort]
line_length = 105
profile = "black"

[tool.mypy]
exclude = "/contxt/generated/"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

